# iaa

./: Cargo.toml  README.md  config.toml
scripts/: addmod.sh  create_all.sql  create_table.sql  drop_all.sql  sign.py
src/: args.rs  config.rs  discoverer.rs  discoverer.rs.bak  fileinfo.rs  hash.rs  main.rs  memory.rs  pool.rs  schema.rs  worker.rs
src/discoverer/: bmp.rs  gif.rs  ico.rs  mod.rs  png.rs  regf.rs  sqlite3.rs  wav.rs  zip.rs
