[package]
edition = "2021"
name = "iaa"
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
blake3 = "1.8.2"
chrono = {version = "0.4.42", features = ["std"] }
clap = { version = "4.5.53", features = ["cargo", "derive"] }
crate-version = "0.1.0"
crossbeam-channel = "0.5.14"
diesel = {version = "2.3.4", default-features = false, features = ["postgres", "postgres_backend", "chrono", "r2d2", "serde_json"]}
entropy = "0.4.2"
hex-literal = "1.1.0"
humantime = "2.3.0"
log = "0.4.26"
memmap = "0.7.0"
nt-time = "0.13.0"
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha256 = "1.5.0"
simplelog = "0.12.2"
sqlite = "0.37.0"
threadpool = "1.8.1"
toml = "0.9.11"
walkdir = "2.5.0"
zip = "7.1.0"
